# scan-capture-demo

./: README.md  app.json  babel.config.js  eas.json  index.js  package-lock.json  package.json
backend/server/: Cargo.toml
scripts/: setup.sh
src/: App.tsx
src/screens/: CaptureImage.tsx  DetectFace.tsx  Home.tsx  OCR.tsx  ScanDocument.tsx  ScanDocumentDS.tsx  ScanDocumentVC.tsx
src/screens/e2e/: Inquiry.tsx
