[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel =  { version = "2.2.3", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
    "serde_json",
]}
eyre = "0.6.12"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
uuid = "1.10.0"
